# WaveSyncDB

./: .dockerignore  .gitignore  .wavesync_config.json  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md
.cargo/: config.toml
.github/workflows/: build-ios.yml  docker-publish.yml  e2e.yml  rust.yml
example/src/: model.rs
examples/: .env  Cargo.toml  diesel.toml  wavesyncdb_test.db
examples/bench/: Cargo.toml
examples/bench/src/: common.rs
examples/dioxus_app/: Cargo.toml
examples/dioxus_app/src/: main.rs
examples/dioxus_app/src/entity/: task.rs
examples/dioxus_dynamic/: Cargo.toml
examples/dioxus_dynamic/src/: main.rs
examples/dioxus_fcm_sync/: Cargo.toml  Dioxus.toml  TESTING.md  build.rs  entitlements.plist  test.maestro.phase-a.yaml  test.maestro.phase-b.yaml  test.sh
examples/dioxus_fcm_sync/src/: main.rs
examples/dioxus_fcm_sync/src/entity/: task.rs
examples/p2p/: Cargo.toml  diesel.toml
examples/p2p/migrations/2025-09-22-010126-0000_create_table_tasks/: up.sql
examples/p2p/src/: main.rs  model.rs
examples/qr_pairing/: .env.example  .gitignore  AndroidManifest.xml  Cargo.toml  Dioxus.toml  build.rs  package.json  test.maestro.yaml  test.sh  web_driver.js
examples/qr_pairing/src/: main.rs  native_app.rs  pairing.rs  qr_scanner.rs  task_native.rs  web_app.rs
examples/rn-sync-demo/: App.tsx  Cargo.toml  app.json  index.js  metro.config.js  package-lock.json  package.json
examples/rn-sync-demo/android/: settings.gradle
examples/rn-sync-demo/android/app/: build.gradle
examples/rn-sync-demo/android/app/src/main/java/com/wavesyncdemo/: MainActivity.kt  MainApplication.kt
examples/rn-sync-demo/android/app/src/main/res/values/: strings.xml
examples/rn-sync-demo/ios/: Podfile
examples/rn-sync-demo/ios/WaveSyncDemo/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
examples/rn-sync-demo/ios/WaveSyncDemo.xcodeproj/: project.pbxproj
examples/rn-sync-demo/ios/WaveSyncDemo.xcodeproj/xcshareddata/xcschemes/: WaveSyncDemo.xcscheme
examples/rn-sync-demo/src/db/: Task.ts  database.ts  schema.ts
examples/src/: main.rs
examples/wan/: Cargo.toml
examples/wan/src/: main.rs
examples/wsdb_example/: Cargo.toml
examples/wsdb_example/src/: schema.rs
scripts/: build-ios.sh
templates/android/: WaveSyncService.kt
templates/ios/: WaveSyncNotificationHandler.swift
tests-e2e/: Cargo.toml  Dockerfile.test-peer  build-images.sh
tests-e2e/src/: lib.rs  task_entity.rs
tests-e2e/tests/: dcutr_validation.rs  partition_recovery.rs  wan_netem_profiles.rs  wan_two_peer_sync.rs
wavesync_android/: build.gradle.kts  settings.gradle.kts
wavesync_android/src/main/: AndroidManifest.xml
wavesync_relay/: Cargo.toml  Dockerfile  docker-compose.yml
wavesync_relay/src/: main.rs  push_notifier.rs  push_protocol.rs  push_sender.rs  push_store.rs
wavesyncdb/: Cargo.toml  README.md
wavesyncdb-derive/: Cargo.toml
wavesyncdb-derive/src/: lib.rs
wavesyncdb/examples/: managed_relay_test.rs
wavesyncdb/src/: auth.rs  background_sync.rs  conflict.rs  connection.rs  crud.rs  diagnostics.rs  engine.rs  fcm.rs  ffi.rs  instrument.rs  lib.rs  merkle.rs  messages.rs  network_status.rs  peer_addrs.rs  peer_tracker.rs  protocol.rs  push.rs  registry.rs  shadow.rs  snapshot.rs  sync.rs  sync_log.rs  synced_model.rs  synced_table.rs  types.rs  web_engine.rs  web_entity.rs  web_store.rs
wavesyncdb/src/android/: build.gradle.kts  consumer-rules.pro
wavesyncdb/src/android/src/main/: AndroidManifest.xml
wavesyncdb/src/android/src/main/kotlin/dev/dioxus/main/: WaveSyncInitProvider.kt  WaveSyncService.kt
wavesyncdb/src/dioxus/: hooks.rs  mod.rs  sync_handle.rs  web_hooks.rs
wavesyncdb/src/dioxus/lifecycle/: android.rs  ios.rs  mod.rs  noop.rs
wavesyncdb/src/dioxus/push/: ios.rs  mod.rs  noop.rs
wavesyncdb/src/engine/: auth_protocol.rs  behaviour.rs  command_handler.rs  identity_handler.rs  mod.rs  peer_manager.rs  push_protocol.rs  relay_manager.rs  snapshot_protocol.rs  sync_handler.rs
wavesyncdb/src/instrument/: dialects.rs  mod.rs  types.rs  util.rs
wavesyncdb/src/ios/: Package.swift
wavesyncdb/src/ios/Sources/WaveSyncPush/: WaveSyncPushBridge.swift  WaveSyncPushHandler.swift  WaveSyncTokenStore.swift  WaveSyncTokenWriter.swift
wavesyncdb/src/ios/Sources/WaveSyncPushObjC/: WaveSyncAppDelegateProxy.m  WaveSyncCompletionWrapper.m
wavesyncdb/src/ios/Sources/WaveSyncPushObjC/include/: WaveSyncAppDelegateProxy.h  WaveSyncCompletionWrapper.h
wavesyncdb/src/sync/: behaviour.rs  mod.rs
wavesyncdb/tests/: cached_peer_addrs.rs  diagnostics.rs  integration.rs  integration_bugs.rs  integration_dioxus.rs  integration_sync.rs  node.rs  notifications.rs
wavesyncdb/tests/common/: mod.rs
wavesyncdb_derive/: Cargo.toml
wavesyncdb_derive/src/: lib.rs
wavesyncdb_derive/tests/: sync.rs  user.rs
wavesyncdb_dioxus/: Cargo.toml
wavesyncdb_dioxus/src/: hooks.rs  launch.rs  lib.rs
wavesyncdb_ffi/: Cargo.toml
wavesyncdb_ffi/src/: builder.rs  callbacks.rs  db.rs  error.rs  lib.rs  sync.rs  types.rs
website/: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  docker-compose.yml  nginx.conf
website/assets/: main.css
website/content/docs/: 01-introduction.md  02-installation.md  03-quickstart.md  04-architecture.md  05-sync-protocol.md  06-conflict-resolution.md  07-authentication.md  08-networking.md  09-schema.md  10-dioxus-integration.md  11-mobile-and-push.md  12-relay-deployment.md  13-configuration.md  14-faq.md  15-benchmarks.md  16-api-reference.md
website/src/: app.rs  docs_content.rs  main.rs
website/src/components/: code_block.rs  docs_sidebar.rs  feature_card.rs  flow_diagram.rs  footer.rs  mod.rs  nav.rs
website/src/pages/: benchmarks.rs  docs.rs  examples.rs  home.rs  mod.rs  not_found.rs  sync_demo.rs  todo_demo.rs
workspace/wavesyncdb/: Cargo.toml
workspace/wavesyncdb/src/: lib.rs
workspace/wavesyncdb/src/instrument/: dialects.rs  mod.rs
workspace/wavesyncdb/src/instrument/handler/: common.rs  insert.rs
wsdb_example/: Cargo.toml
wsdb_example/src/: main.rs  model.rs
(+1 files in other folders)
