[workspace]
members = [
    "wavesyncdb", 
    "wavesyncdb_derive",
    "examples/*"
, "wavesyncdb_dioxus"]
# exclude = ["examples"]
resolver = "3"

[workspace.dependencies]
wavesyncdb = { path = "wavesyncdb", version = "0.2.0"}
wavesyncdb_derive = { path = "wavesyncdb_derive", version = "0.1.0"}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
