[workspace]
members = [
    "wavesyncdb",
    "wavesyncdb_derive",
    "wavesync_relay",
    "website",
    "tests-e2e",
    "examples/*",
]
exclude = [
    "examples/dioxus_app",
    "examples/dioxus_dynamic",
]
resolver = "3"

[workspace.dependencies]
wavesyncdb = { path = "wavesyncdb", version = "0.5.0" }
wavesyncdb_derive = { path = "wavesyncdb_derive", version = "0.2.1" }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
libp2p = { version = "0.56.0", features = ["dns", "identify", "mdns", "ping", "quic", "request-response", "serde", "tokio", "noise", "yamux", "tcp", "relay", "dcutr", "autonat", "rendezvous"] }
thiserror = "2.0"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
inventory = "0.3"
