[package]
name = "wavesyncdb_example"
version = "0.1.0"
edition = "2024"


[dependencies]
chrono = "0.4.42"
diesel = { version = "2.3.2", features = ["chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes", "returning_clauses_for_sqlite_3_35", "sqlite", "uuid"] }
log = "0.4.28"
dotenvy = "0.15.6"
uuid = { version = "1.4.3", features = ["v4"] }
env_logger = "0.10.0"
wavesyncdb = { path = "../workspace/wavesyncdb" }

