[package]
name = "wavesyncdb-e2e"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "test-peer"
path = "src/bin/test_peer.rs"

[dependencies]
wavesyncdb = { workspace = true, features = ["derive"] }
wavesyncdb_derive = { path = "../wavesyncdb_derive" }
sea-orm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
axum = "0.7"
log = { workspace = true }
env_logger = "0.11"
libp2p = { workspace = true }
base64 = "0.22"
testcontainers = "0.27"
bollard = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
uuid = { workspace = true }
