[package]
name = "wavesync_relay"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Relay and rendezvous server for WaveSyncDB WAN peer discovery and NAT traversal"

[[bin]]
name = "wavesync-relay"
path = "src/main.rs"

[dependencies]
libp2p = { workspace = true, features = ["relay", "rendezvous", "identify", "ping", "autonat", "request-response"] }
libp2p-swarm-derive = "0.35.1"
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
serde = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
base64 = "0.22"
