[package]
name = "wavesync_relay"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
description = "Relay and rendezvous server for WaveSyncDB WAN peer discovery and NAT traversal"

[[bin]]
name = "wavesync-relay"
path = "src/main.rs"

# Dependencies are pinned directly (no `workspace = true`) so the crate
# can be built standalone — e.g. when Dokploy clones the repo and sets
# the build context to this subdirectory. Keep these versions in sync
# with the workspace root's `[workspace.dependencies]` on bumps.
[dependencies]
libp2p = { version = "0.56.0", features = ["relay", "rendezvous", "identify", "ping", "autonat", "request-response", "tokio", "noise", "yamux", "tcp", "quic"] }
libp2p-swarm-derive = "0.35.1"
tokio = { version = "1.47", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
base64 = "0.22"
