[package]
name = "wavesyncdb"
version = "0.4.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WaveSyncDB is a lightweight, distributed database synchronization engine designed to bridge the gap between real-time data streaming and relational storage. It ensures high-consistency data replication across decentralized nodes with a focus on low-latency updates."
repository = "https://github.com/pvg13/WaveSyncDB"
readme = "README.md"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
libp2p-swarm-derive = "0.35.1"
async-trait = "0.1"
futures = "0.3"
log = { workspace = true }
thiserror = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
inventory = { workspace = true }
blake3 = "1"
wavesyncdb_derive = { path = "../wavesyncdb_derive", optional = true }
dioxus = { version = "0.7.3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }
ndk-context = { version = "0.1", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-ui-kit = { version = "0.3", optional = true, features = ["UIApplication"] }

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
derive = ["dep:wavesyncdb_derive"]
dioxus = ["dep:dioxus", "dep:jni", "dep:ndk-context", "dep:objc2", "dep:objc2-foundation", "dep:objc2-ui-kit"]
mobile-ffi = []
