[package]
name = "wavesyncdb"
version = "0.5.0"
edition = "2024"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
description = "WaveSyncDB is a lightweight, distributed database synchronization engine designed to bridge the gap between real-time data streaming and relational storage. It ensures high-consistency data replication across decentralized nodes with a focus on low-latency updates."
repository = "https://github.com/pvg13/WaveSyncDB"
readme = "README.md"

# Dependencies that work on every target (including wasm32-unknown-unknown).
# Anything that pulls in OS sockets, native sqlite, or full tokio belongs in
# the `[target.'cfg(not(target_arch = "wasm32"))']` block below.
[dependencies]
serde = { workspace = true }
futures = "0.3"
log = { workspace = true }
thiserror = { workspace = true }
serde_json = "1.0"
inventory = { workspace = true }
blake3 = "1"
async-trait = "0.1"
wavesyncdb_derive = { path = "../wavesyncdb_derive", optional = true }
dioxus = { version = "0.7.6", optional = true }
manganis = { version = "0.7.6", optional = true }

# Native targets: full sync engine, libp2p transports, sea-orm with sqlx-sqlite,
# tokio with the OS-I/O surface. None of these compile on wasm32-unknown-unknown.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
libp2p-swarm-derive = "0.35.1"
uuid = { workspace = true }

# Wasm32 (browser): no sqlx, no tokio I/O. Provide a minimal wasm-friendly
# tokio for `sync` primitives only, uuid with `js` for browser entropy, and
# a libp2p subset that uses WebSocket-websys as the only transport — the
# only browser-native libp2p transport with mature support and no
# certificate-pinning friction. WebTransport/WebRTC could be added later.
#
# sea-orm is intentionally absent (libsqlite3-sys is a C dep). Browser
# storage (IndexedDB-backed shadow tables) is a future opt-in.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47", default-features = false, features = ["sync", "macros"] }
uuid = { version = "1", features = ["v4", "js"] }
libp2p = { version = "0.56.0", default-features = false, features = ["websocket-websys", "request-response", "noise", "yamux", "ping", "identify", "serde", "wasm-bindgen", "macros", "relay"] }
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.3 is pulled in transitively via libp2p → yamux → rand 0.9;
# enabling its `wasm_js` feature here ensures the browser-entropy backend
# is selected. The companion `getrandom_backend="wasm_js"` rustflag lives
# in `.cargo/config.toml`.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
# Browser-side persistent storage for identity + shadow tables + db_version.
# `idb` is a thin async wrapper over the IndexedDB Web API; without it,
# raw web-sys IDB is event-callback-driven and would require ~200 lines of
# oneshot-channel plumbing to interact with as `async`. Persistence is
# what lets a reloaded tab keep its peer identity and conflict-resolution
# state instead of looking like a fresh peer to the network.
idb = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }
ndk-context = { version = "0.1", optional = true }
# android_logger routes `log::*` output to Android's logcat. Without it,
# engine logs from background_sync (which runs in the FirebaseMessagingService
# JNI thread, with no env_logger / no stderr redirection) silently disappear,
# making "no peers found" failures uninvestigable.
android_logger = { version = "0.14", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-ui-kit = { version = "0.3", optional = true, features = ["UIApplication"] }
block2 = { version = "0.6", optional = true }

[dev-dependencies]
env_logger = "0.11"
# Make the SyncEntity derive available to all test binaries unconditionally,
# so `tests/common/mod.rs` can use it without forcing every test to enable
# the `derive` feature on the main crate.
wavesyncdb_derive = { path = "../wavesyncdb_derive" }

[features]
default = []
derive = ["dep:wavesyncdb_derive"]
# Dioxus integration: lifecycle hooks, reactive signals, platform observers.
# Platform-specific deps (jni on Android; objc2 family on iOS) are target-gated
# in the `[target.'cfg(...)'.dependencies]` sections above, so enabling `dioxus`
# on desktop does not pull them in — Cargo silently skips `dep:` references
# that point at target-gated optional deps on non-matching targets.
dioxus = ["derive", "dep:dioxus", "dep:jni", "dep:ndk-context", "dep:objc2", "dep:objc2-foundation", "dep:objc2-ui-kit", "dep:block2"]
# Cold-sync push notifications (FCM on Android, APNs on iOS). Bundles the
# Kotlin AAR / Swift Package into consumer apps via manganis; gates the
# Rust-side token-read helpers and FFI exports. Platform-specific code
# inside the crate is additionally gated by `#[cfg(target_os = "...")]`.
push-sync = ["mobile-ffi", "dep:manganis", "dep:android_logger"]
mobile-ffi = []
# Browser/wasm32 build. Exposes pure-data modules (messages, conflict, auth,
# protocol types, registry, network_status) so they can be linked from
# Dioxus web apps. The libp2p-backed sync engine, sea-orm connection wrapper,
# shadow tables, peer tracker, push helpers, and FFI surface are
# `cfg(not(target_arch = "wasm32"))`-gated and unavailable in browser builds.
# Browser-side P2P transports (WebSocket / WebRTC / WebTransport) are a
# separate, future opt-in. Pulls in `derive` so `#[derive(SyncEntity)]`
# auto-generates `impl BrowserEntity` on wasm.
web = ["derive"]
