[package]
name = "wavesyncdb_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
sqlx = { workspace = true }
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"
wavesyncdb = { workspace = true }
