[package]
name = "wavesyncdb_derive"
version = "0.2.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Proc macro for WaveSyncDB: #[derive(SyncEntity)] auto-registers SeaORM entities for P2P sync"
repository = "https://github.com/pvg13/WaveSyncDB"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
tokio = { workspace = true }
sea-orm = { workspace = true }
wavesyncdb = { workspace = true }
