[package]
name = "wavesyncdb_derive"
version = "0.2.1"
edition = "2024"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
description = "Proc macro for WaveSyncDB: #[derive(SyncEntity)] auto-registers SeaORM entities for P2P sync"
repository = "https://github.com/pvg13/WaveSyncDB"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[dev-dependencies]
tokio = { workspace = true }
sea-orm = { workspace = true }
wavesyncdb = { workspace = true }
