[package]
name = "wavesyncdb_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
wavesyncdb = { path = "../wavesyncdb" }
uniffi = { version = "0.29", features = ["tokio", "cli"] }
tokio = { version = "1.47", features = ["full"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio"] }
thiserror = "2.0"
tracing = "0.1"
log = "0.4"
env_logger = { version = "0.11", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[features]
default = []
