[package]
name = "wavesyncdb-bench"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "bench_overhead"
path = "src/bin/bench_overhead.rs"

[[bin]]
name = "bench_lan_sync"
path = "src/bin/bench_lan_sync.rs"

[[bin]]
name = "bench_catchup"
path = "src/bin/bench_catchup.rs"

[[bin]]
name = "bench_conflict"
path = "src/bin/bench_conflict.rs"

[lib]
path = "src/common.rs"
name = "bench_common"

[dependencies]
wavesyncdb = { workspace = true, features = ["derive"] }
wavesyncdb_derive = { path = "../../wavesyncdb_derive" }
sea-orm = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde_json = "1.0"
log = { workspace = true }
env_logger = "0.11"
