[package]
name = "example-wan"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
env_logger = "0.11"
wavesyncdb = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }
