[package]
name = "wavesyncdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
diesel = { version = "2.3.2", features = ["chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes", "returning_clauses_for_sqlite_3_35", "sqlite", "uuid"]}
log = "0.4.28"
sqlparser = "0.58.0"

